# generic_aho_corasick

./: CMakeLists.txt  README.md  aho_corasick.hpp  test.cpp
